Changed SignupForm to be more flexible for error msgs.

--- a/app/browser/src/sass/modules/_form.scss
+++ b/app/browser/src/sass/modules/_form.scss
@@ -12,6 +12,12 @@
     font-weight: 100;
     color: grey;
   }
+
+  &__error {
+    color: red;
+    margin-left: 20px;
+    font-size: 0.8rem;
+  }
   &__input {
     display: block;
     outline: none;
