--- a/browser/src/sass/utilities/_config.scss
+++ b/browser/src/sass/utilities/_config.scss
@@ -1,1 +1,9 @@
 // variables go here
+
+//signupPage colors
+$blue: #2196f3;
+$light-grey: #f5f9fa;
+$green: #5fba7d;
+
+//signupPage font
+@import url('https://fonts.googleapis.com/css?family=Roboto');
